--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ huggingface-hub==0.23.4
 matplotlib==3.6.0
 numpy==1.26.4
 pandas==2.2.2
+scikit-learn==1.3.1
 sentence_transformers==2.2.2
 spacy==3.8.3
 tqdm==4.64.1
